fixed alignment for under 1028px

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,7 @@ p {
 @media (max-width: 1028px) {
 .intro {
   text-align: center;
+  width:  100%;
 }
 
 .skill-row {
